...
        title: const Text('Conversa'),
        actions: const [AppBarActions()],
        bottom: TabBar(
          controller: _tabController,
          tabs: const [
            Tab(text: 'Mensagens'),
            Tab(text: 'Acoes'),
          ],
        ),
      ),
      body: TabBarView(
        controller: _tabController,
        children: [
...
