...
  }

  static const _destinations = <NavItem>[
    NavItem(icon: Icons.dashboard_outlined, activeIcon: Icons.dashboard, label: 'Painel'),
    NavItem(icon: Icons.calendar_today_outlined, activeIcon: Icons.calendar_today, label: 'Agenda'),
    NavItem(icon: Icons.support_agent_outlined, activeIcon: Icons.support_agent, label: 'Intervenção'),
    NavItem(icon: Icons.folder_outlined, activeIcon: Icons.folder, label: 'Docs'),
    NavItem(icon: Icons.meeting_room_outlined, activeIcon: Icons.meeting_room, label: 'Recursos'),
  ];

  static const _railDestinations = [
    NavigationRailDestination(
      icon: Icon(Icons.dashboard_outlined),
...
